<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/voice_mail_text"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:text="@string/voicemail"
        android:layout_margin="24dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/calling"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
        android:id="@+id/calling"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/voice_mail_text"/>

    <android.support.design.button.MaterialButton
        android:id="@+id/mute"
        android:layout_width="150dp"
        android:layout_height="60dp"
        app:backgroundTint="@color/colorPrimary"
        app:icon="@drawable/ic_mic_black_24dp"
        android:text="@string/mute"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calling"
        app:layout_constraintEnd_toStartOf="@id/keypad"/>

    <android.support.design.button.MaterialButton
        android:id="@+id/keypad"
        android:layout_width="150dp"
        android:layout_height="60dp"
        app:backgroundTint="@color/colorPrimary"
        android:text="@string/keypad"
        android:layout_marginTop="24dp"
        app:icon="@drawable/ic_dialpad_black_24dp"
        app:layout_constraintStart_toEndOf="@+id/mute"
        app:layout_constraintTop_toBottomOf="@id/calling"
        app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.design.button.MaterialButton
        android:id="@+id/speaker"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/speaker"
        android:layout_marginTop="24dp"
        app:backgroundTint="@color/colorPrimary"
        app:icon="@drawable/ic_volume_up_black_24dp"
        app:layout_constraintEnd_toStartOf="@id/add_call"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mute" />

    <android.support.design.button.MaterialButton
        android:id="@+id/add_call"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/add_call"
        android:layout_marginTop="24dp"
        app:backgroundTint="@color/colorPrimary"
        app:icon="@drawable/ic_add_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/keypad"
        app:layout_constraintStart_toEndOf="@id/speaker"/>

    <android.support.design.button.MaterialButton
        android:id="@+id/contacts"
        android:layout_width="148dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/contacts"
        app:backgroundTint="@color/colorPrimary"
        app:icon="@drawable/ic_person_black_24dp"
        app:layout_constraintEnd_toStartOf="@id/video_calling"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speaker" />

    <android.support.design.button.MaterialButton
        android:id="@+id/video_calling"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/video_call"
        app:backgroundTint="@color/colorPrimary"
        app:icon="@drawable/ic_videocam_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/add_call"
        app:layout_constraintStart_toEndOf="@id/contacts"
        app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:src="@drawable/ic_call_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contacts" />

</android.support.constraint.ConstraintLayout>